--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bold Step | 컨설팅 회사</title>
+  <title> Bold Step Company | 컨설팅 회사</title>
   
   <!-- ✅ SEO 메타태그 -->
   <meta name="description" content="Bold Step은 디지털 전환, 신사업 개발, AI 전략 등 다양한 분야에서 기업의 성장을 지원하는 전략 컨설팅 회사입니다.">
@@ -82,6 +82,7 @@
     <p>
       Bold Step은 혁신과 실행을 중심에 둔 전략 컨설팅 회사입니다.<br>
       디지털 전환, 신사업 개발, 조직 혁신 등 다양한 분야에서 기업의 지속 성장을 지원합니다.
+      대기업과 스타트업 기업 자문 및 코칭을 등 고객의 성장을 지원합니다.  
     </p>
   </section>
 
@@ -95,17 +96,42 @@
     </p>
   </section>
 
+  <section id="vision">
+    <h2>Bold Step의 비전</h2>
+    <p>
+      우리는 빠르게 변화하는 시대 속에서 ‘한 발 앞선 전략’을 제안합니다.<br />
+      Bold Step은 기술과 비즈니스, 사람을 연결하며<br />
+      기업의 지속가능한 미래를 만들어 갑니다.
+    </p>
+  </section>
+
+  
   <section>
     <h2>연락처</h2>
     <p>
       이메일: <a href="mailto:boldstep2025@gmail.com">boldstep2025@gmail.com</a><br>
-      위치: 경기도 용인시 ... <br>
+      위치: 경기도 용인시 수지구 포은대로59번길 37 <br>
     </p>
   </section>
 
   <footer>
-    &copy; 2025 Bold Step. All rights reserved.
+    &copy; 2025 Bold Step Company. All rights reserved.
   </footer>
+  <script>
+    // 간단한 스크롤 애니메이션 효과
+    const sections = document.querySelectorAll("section");
 
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+        }
+      });
+    }, { threshold: 0.1 });
+
+    sections.forEach(section => {
+      observer.observe(section);
+    });
+  </script>
 </body>
 </html>
